--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://findpornface.com/articles/--pornstar-lookalike">
-    <title>Redirecting...</title>
+    <script>
+      const host = window.location.hostname; // e.g., sub1.mydomain1.com
+      const subdomain = host.split('.')[0]; // Extract 'sub1'
+      
+      if (subdomain !== 'www' && subdomain !== 'lookalike' && subdomain !== 'lookalike-fpf') {
+        // Redirect to the corresponding page on the external site
+        window.location.href = `https://lookalike-fpf.github.io/${subdomain}`;
+      } else {
+        window.location.href = `https://findpornface.com/`;
+      }
+    </script>
+    
+    <!-- <meta http-equiv="refresh" content="0; url=https://findpornface.com/">
+    <title>Redirecting...</title> -->
   </head>
   <body>
-    <p>If you are not redirected automatically, <a href="https://findpornface.com/articles/--pornstar-lookalike">click here</a>.</p>
+    <!-- <p>If you are not redirected automatically, <a href="https://findpornface.com/">click here</a>.</p> -->
   </body>
 </html>
